finished developer message

--- a/assets/ignoreit/message_developer.html
+++ b/assets/ignoreit/message_developer.html
@@ -1,149 +1,201 @@
-<p>প্রথমে সর্বশক্তিমান সৃষ্টিকর্তাকে ধন্যবাদ যার কৃপায় আমরা আমাদের এত বড় প্রজেক্ট মোটামুটি হলেও শেষ করতে পেরেছি। এই প্রজেক্টের সবচেয়ে চ্যালেঞ্জিং অংশ ছিল সঠিক এবং নির্ভুল তথ্য দেয়া। কিন্তু একটা উচ্চশিক্ষার প্রতিষ্ঠানগুলোতে সকল কাজ সঠিকভাবে সম্পন্ন করার জন্য বিভিন্ন পর্যায়ের অনেক সংখ্যাক ব্যাক্তি নিয়োগ থাকেন। অনেকেরই পদন্নোতি হয়, অনেকে শিক্ষাছুটিতে দেশের বাহিরে অবস্থান নেন এবং কোন বিশেষ ভূমিকায় দ্বায়িত্বপ্রাপ্ত ব্যাক্তিদের মধ্যেও পরিবর্তন ঘটে। ব্যাপারটা এমন যে আজ এপ পাবলিশের পর যেই ইনফরমেশন আছে,তা আগামী তিন থেকে ৬ মাসের মধ্যে পর চেক করলে দেখা যাবে এতেও অনেক পরিবর্তন করা দরকার। যাই হোক, তবুও আমরা চেষ্টা করেছি সর্বশেষ তথ্যটি দিতে। ২০১৪ সালের জানুয়ারী মাসে করা রেজিস্টার অফিস থেকে যে ডায়রী সরবরাহ করা হয়েছিল তার সাহায্য নেয়া হয়েছে এপ্লিকেশনটি তৈরি করার সময়। ডায়রী থেকে পাওয়া তথ্যও আমরা ম্যানুয়্যালী আপডেট করেছি বিশেষ করে শিক্ষক এবং একাডেমিক ভবনের স্টাফদের ক্ষেত্রে। তবুও এখানে ১০০ % তথ্যের মধ্যে ২-৩ % তথ্য সমস্যা থাকতে পারে।&nbsp; সেক্ষেত্রে আমাদের সাথে সাথে ইমেইল করে জানাবেন। আমরা চেষ্টা করেছি একটা প্ল্যাটফর্ম তৈরি করে যেতে, প্রথম ভার্সন হওয়ায় ভুল ত্রুটি স্বাভাবিক।&nbsp; আমরা আপনার তথ্যটি ভেরিফাই করে আমাদের সার্ভারে ঠিক করে ফেলব। পরবর্তী ভার্সনে ইউজার নিভুল তথ্য পাবেন।</p>
+<style type="text/css">.infoclass{ font-size:15px;padding:8px; margin-bottom:3px; border-radius: 3px;  background-color:white;-webkit-box-shadow: inset 0px 0px 2px 0px rgba(49, 50, 50, 0.67);
+-moz-box-shadow:    inset 0px 0px 2px 0px rgba(49, 50, 50, 0.67);
+box-shadow:         inset 0px 0px 2px 0px rgba(49, 50, 50, 0.67);}
+body{background-color:#f5f5f5; font-family:serif; line-height:1.3em; border:3px solid #29b6f6; 	border-radius: 6px; padding:3px; padding-top:8px }
+p{font-size:15px}
+.headertitle{width:100%; font-size: 17px; background:#29b6f6; color:#FFFFFF; border-radius: 3px; text-align: center}
+.maintitle{font-weight:bold;width:100%; font-size: 16px; background:#039be5; color:#FFFFFF; border-radius: 15px;padding-top:10px; padding-bottom:10px; text-align: center; margin-bottom:10px}
+.telephone {
+    background-image: url("http://i61.tinypic.com/n6xtmw.png");
+    background-position: 0 0px;
+    background-repeat: no-repeat;
+    background-size: 20px auto;
+    color: black;
+    padding-bottom: 3px;
+    padding-left: 22px;
+    text-decoration: none;
+    padding-top: 2px;
+}
+.telephone:hover{color:#29b6f6}
+.email {
+    background-image: url("http://i60.tinypic.com/dqm2cy.png");
+    background-position: 3px 3px;
+    background-repeat: no-repeat;
+    background-size: 18px auto;
+    color: black;
+    padding-bottom: 3px;
+    padding-left: 22px;
+    padding-top: 2px;
+    text-decoration: none;
+}
+.email:hover{color:#29b6f6}
+</style>
+<div class="maintitle">Conclusion</div>
 
-<p>যদিও গুগল প্লে সার্ভিস স্টোর এপ্লিকেশন আপডেট সিস্টেম দেয় তবুও তথ্য আরো নির্ভুল রাখার জন্য আমরা সফটওয়্যারে নতুন আরেকটা Custom Update ফিচার যোগ করেছি। এটা আমাদের সার্ভারে থাকা ভার্সনকে পিং করবে। যদি তথ্য আপডেট হয় তাহলে ভার্সন চেঞ্জ হবে। ফলে ইউজার ইন্টারনেট চালু করে এপ্লিকেশনটি অন করলেই দেখতে পারবেন কি কি তথ্য আপডেট হয়েছে। এবং ইউজার download now তে ক্লিক করে নতুন ভার্সনটি ডাউনলোড করে নিবেন এবং ইন্সটল করবেন।</p>
+<div class="infoclass">প্রথমে সর্বশক্তিমান সৃষ্টিকর্তাকে ধন্যবাদ যার কৃপায় আমরা আমাদের এত বড় প্রজেক্ট মোটামুটি হলেও শেষ করতে পেরেছি। এই প্রজেক্টের সবচেয়ে চ্যালেঞ্জিং অংশ ছিল সঠিক এবং নির্ভুল তথ্য দেয়া। কিন্তু একটা উচ্চশিক্ষার প্রতিষ্ঠানগুলোতে সকল কাজ সঠিকভাবে সম্পন্ন করার জন্য বিভিন্ন পর্যায়ের অনেক সংখ্যাক ব্যাক্তি নিয়োগ থাকেন। অনেকেরই পদন্নোতি হয়, অনেকে শিক্ষাছুটিতে দেশের বাহিরে অবস্থান নেন এবং কোন বিশেষ ভূমিকায় দ্বায়িত্বপ্রাপ্ত ব্যাক্তিদের মধ্যেও পরিবর্তন ঘটে। ব্যাপারটা এমন যে আজ এপ পাবলিশের পর যেই ইনফরমেশন আছে,তা আগামী তিন থেকে ৬ মাসের মধ্যে পর চেক করলে দেখা যাবে এতেও অনেক পরিবর্তন করা দরকার। যাই হোক, তবুও আমরা চেষ্টা করেছি সর্বশেষ তথ্যটি দিতে। ২০১৪ সালের জানুয়ারী মাসে করা রেজিস্টার অফিস থেকে যে ডায়রী সরবরাহ করা হয়েছিল তার সাহায্য নেয়া হয়েছে এপ্লিকেশনটি তৈরি করার সময়। ডায়রী থেকে পাওয়া তথ্যও আমরা ম্যানুয়্যালী আপডেট করেছি বিশেষ করে শিক্ষক ও একাডেমিক ভবনের স্টাফদের ক্ষেত্রে। ডায়রীতে নেই কিন্তু ছাত্রদের জন্য প্রয়োজনীয় অনেক তথ্য বিভিন্ন জায়গা থেকে সংগ্রহ করেছি। তবুও এখানে ১০০ % তথ্যের মধ্যে ২-৩ % তথ্য সমস্যা থাকতে পারে।&nbsp; সেক্ষেত্রে আমাদের সাথে সাথে ইমেইল করে জানাবেন। আমরা চেষ্টা করেছি একটা প্ল্যাটফর্ম তৈরি করে যেতে, প্রথম ভার্সন হওয়ায় ভুল ত্রুটি স্বাভাবিক।&nbsp; আমরা আপনার তথ্যটি ভেরিফাই করে আমাদের সার্ভারে ঠিক করে ফেলব। পরবর্তী ভার্সনে ইউজার নিভুল তথ্য পাবেন।<br />
+<br />
+যদিও গুগল প্লে সার্ভিস স্টোর এপ্লিকেশন আপডেট সিস্টেম দেয় তবুও তথ্য আরো নির্ভুল রাখার জন্য আমরা সফটওয়্যারে নতুন আরেকটা Custom Update ফিচার যোগ করেছি। এটা আমাদের সার্ভারে থাকা ভার্সনকে পিং করবে। যদি তথ্য আপডেট হয় তাহলে ভার্সন চেঞ্জ হবে। ফলে ইউজার ইন্টারনেট চালু করে এপ্লিকেশনটি অন করলেই দেখতে পারবেন কি কি তথ্য আপডেট হয়েছে। এবং ইউজার download now তে ক্লিক করে নতুন ভার্সনটি ডাউনলোড করে নিবেন এবং ইন্সটল করবেন।<br />
+<br />
+আমরা ১০০ % নির্ভুল তথ্য দেয়ার জন্য কাজ করে যাচ্ছি। ২০১৫ সালের জন্য রেজিস্টার অফিস গতবারেরর মত আবার নতুন করে ইংরেজীতে তথ্য সংগ্রহ করছে যেখানে সকল পর্যায়ের কর্মকর্তা কর্মচারীদের ইমেইল এড্রেস ব্যবহার করা বাধ্যতামূলক। সেই ইনফরমেশনটি আমাদের হাতে জানুয়ারী মাসে আসলে আমরা শতভাগ নির্ভুল এবং আপডেট তথ্য দিতে পারব। এপ্লিকেশনটি তৈরির মূল উদ্দেশ্য ছিল যেন সকলের যোগাযোগের নাম্বারগুলো থাকে। আশা করি এ চাহিদা পূরন হয়েছে। এ এপ্লিকেশনটি তৈরি করার পেছনে শ্রদ্ধেয় শিক্ষকমন্ডলী এবং বিভিন্ন পর্যায়ের কর্মকর্তাবৃন্দের সার্বিক সহযোগিতা ও উৎসাহ প্রদান করায় তাদের ধন্যবাদ জানাচ্ছি।</div>
 
-<p>আমরা ১০০ % নির্ভুল তথ্য দেয়ার জন্য কাজ করে যাচ্ছি। ২০১৫ সালের জন্য রেজিস্টার অফিস গতবারেরর মত আবার নতুন করে ইংরেজীতে তথ্য সংগ্রহ করছে যেখানে সকল পর্যায়ের কর্মকর্তা কর্মচারীকে ইমেইল এড্রেস ব্যবহার করা বাধ্যতামূলক। সেই ইনফরমেশনটি আমাদের হাতে জানুয়ারী মাসে আসলে আমরা শতভাগ নির্ভুল এবং আপডেট তথ্য দিতে পারব। এপ্লিকেশনটি তৈরির মূল উদ্দেশ্য ছিল যেন সকলের যোগাযোগের নাম্বারগুলো থাকে। আশা করি সবার কাজে লাগবে। এ এপ্লিকেশনটি তৈরি করার পেছনে শ্রদ্ধেয় শিক্ষকমন্ডলী এবং বিভিন্ন পর্যায়ের কর্মকর্তাবৃন্দের সার্বিক সহযোগিতা ও উৎসাহ প্রদান করায় তাদের ধন্যবাদ জানাচ্ছি।</p>
+<p>নিচে কন্ট্রিবিউটর লিস্টে যারা এপ্লিকেশনটি তৈরিতে মূল ভূমিকা পালন করেছে এবং Thanks to লিস্টে যারা প্রজেক্টটি সফল করার ক্ষেত্রে কম-বেশি অবদান রেখেছে তাদের নাম জৈষ্ঠ্যতার ভিত্তিতে দেয়া হল।</p>
 
-<p>Contributors:<br />
-Mashpy<br />
+<div class="headertitle">Contributors:</div>
+
+<div class="infoclass"><strong>Mashpy</strong><br />
 CSTE5th Batch<br />
-www.Mashpy.me<br />
-www.fb.com/mashpy</p>
+<a class="web" href="http://Mashpy.me">www.Mashpy.me</a><br />
+<a href="http://fb.com/mashpy">www.fb.com/mashpy</a><br />
+Email: <a class="email" href="mailto:contact@mashpy.me">contact@mashpy.me</a></div>
 
-<p>Sazzad Hossain<br />
+<div class="infoclass"><strong>Sazzad Hossain</strong><br />
 CSTE5th Batch<br />
-www.fb.com/sazzadh2</p>
+<a class="web" href="http://fb.com/sazzadh2">www.fb.com/sazzadh2</a></div>
 
-<p>Monir Hossain<br />
+<div class="infoclass"><strong>Monir Hossain</strong><br />
 CSTE5th Batch<br />
-www.fb.com/monir.mahmud2</p>
+<a class="web" href="http://fb.com/monir.mahmud2">www.fb.com/monir.mahmud2</a></div>
 
-<p>Sanjida Rafin<br />
+<div class="infoclass"><strong>Pavel Fahmi</strong><br />
 CSTE5th Batch<br />
-www.fb.com/sanjida.rafin</p>
+<a class="web" href="http://fb.com/pavel.fahmi1">www.fb.com/pavel.fahmi1</a></div>
 
-<p>Chanpa Mojumder<br />
+<div class="infoclass"><strong>Sanjida Rafin</strong><br />
 CSTE5th Batch<br />
-www.fb.com/chanpa.majumder</p>
+<a class="web" href="http://fb.com/sanjida.rafin">www.fb.com/sanjida.rafin</a></div>
 
-<p>Fahmida Poly<br />
+<div class="infoclass"><strong>Chanpa Mojumder</strong><br />
 CSTE5th Batch<br />
-www.fb.com/polycste</p>
+<a class="web" href="http://fb.com/chanpa.majumder">www.fb.com/chanpa.majumder</a></div>
 
-<p>Mahmud Rahman<br />
+<div class="infoclass"><strong>Fahmida Poly</strong><br />
 CSTE5th Batch<br />
-www.fb.com/mahmud.nstu</p>
+<a class="web" href="http://fb.com/polycste">www.fb.com/polycste</a></div>
 
-<p>Shahadat Mahmud Bithil<br />
+<div class="infoclass"><strong>Mahmud Rahman</strong><br />
 CSTE5th Batch<br />
-www.fb.com/shahadatmahmud.bithil</p>
+<a class="web" href="http://fb.com/mahmud.nstu">www.fb.com/mahmud.nstu</a></div>
 
-<p>Nazmul Islam<br />
+<div class="infoclass"><strong>Shahadat Mahmud Bithil</strong><br />
+CSTE5th Batch<br />
+<a class="web" href="http://fb.com/shahadatmahmud.bithil">www.fb.com/shahadatmahmud.bithil</a></div>
+
+<div class="infoclass"><strong>Nazmul Islam</strong><br />
 MBG 5th Batch<br />
-www.fb.com/nazmul.microbiology</p>
+<a class="web" href="http://fb.com/nazmul.microbiology">www.fb.com/nazmul.microbiology</a></div>
 
-<p>Anik Das<br />
+<div class="infoclass"><strong>Anik Das</strong><br />
 English 6th Batch<br />
-www.fb.com/jack.anik.1</p>
+<a class="web" href="http://fb.com/jack.anik.1">www.fb.com/jack.anik.1</a></div>
 
-<p>Tawhed Rone<br />
+<div class="infoclass"><strong>Tawhed Rone</strong><br />
 CSTE 7th Batch<br />
-www.towhedrone.com<br />
-www.fb.com/towhedurr</p>
+<a class="web" href="http://towhedrone.com">www.towhedrone.com</a><br />
+<a class="web" href="http://fb.com/towhedurr">www.fb.com/towhedurr</a></div>
 
-<p>Shiblu Khan<br />
+<div class="infoclass"><strong>Shiblu Khan</strong><br />
 EPS 8th Batch<br />
-www.economicsbd.com<br />
-www.fb.com/economicsbdmagazine<br />
-www.fb.com/shiblu.khan.96</p>
+<a class="web" href="http://economicsbd.com">www.economicsbd.com</a><br />
+<a class="web" href="http://fb.com/economicsbdmagazine">www.fb.com/economicsbdmagazine</a><br />
+<a class="web" href="http://fb.com/shiblu.khan.96">www.fb.com/shiblu.khan.96</a></div>
 
-<p>Robiul Awal<br />
+<div class="infoclass"><strong>Robiul Awal</strong><br />
 CSTE 9th Batch<br />
-www.fb.com/rabiulawal2233</p>
+<a class="web" href="http://fb.com/rabiulawal2233">www.fb.com/rabiulawal2233</a></div>
 
-<p>Thanks To:</p>
+<div class="headertitle">Thanks To:</div>
 
-<p>Syful Islam<br />
+<div class="infoclass"><strong>Syful Islam</strong><br />
 CSTE5th Batch<br />
-www.fb.com/syful.islam.10</p>
+<a class="web" href="http://fb.com/syful.islam.10">www.fb.com/syful.islam.10</a></div>
 
-<p>Tanmoy MH<br />
+<div class="infoclass"><strong>Tanmoy MH</strong><br />
 FIMS 5th Batch<br />
-www.fb.com/tanmay.mh90</p>
+<a class="web" href="http://fb.com/tanmay.mh90">www.fb.com/tanmay.mh90</a></div>
 
-<p>Kawsar Didar<br />
+<div class="infoclass"><strong>Kawsar Didar</strong><br />
 FIMS 5th Batch<br />
-www.fb.com/kawser.dipo</p>
+<a class="web" href="http://fb.com/kawser.dipo">www.fb.com/kawser.dipo</a></div>
 
-<p>Rashed (CR)<br />
+<div class="infoclass"><strong>Rashed (CR)</strong><br />
 ACCE<br />
-5th Batch</p>
+5th Batch<br />
+<a href="http://fb.com/rashadul.karim">www.fb.com/rashadul.karim</a></div>
 
-<p>Arup Ghosh<br />
+<div class="infoclass"><strong>Arup Ghosh</strong><br />
 MBG 5th<br />
-www.fb.com/arup.ghosh.77582</p>
+<a class="web" href="http://fb.com/arup.ghosh.77582">www.fb.com/arup.ghosh.77582</a></div>
 
-<p>Dolon Moni<br />
+<div class="infoclass"><strong>Dolon Moni</strong><br />
 Applied Mathmatics<br />
-6th Batch</p>
+6th Batch</div>
 
-<p>Rezaul Karim Bhuiyan Sohag<br />
-Applied Mathmatics<br />
-6th Batch<br />
-www.fb.com/rezaulkarim.sohag</p>
-
-<p>Nurul Karim<br />
+<div class="infoclass"><strong>Rezaul Karim Bhuiyan Sohag</strong><br />
 Applied Mathmatics<br />
 6th Batch<br />
-www.fb.com/nurul.karim.311</p>
+<a class="web" href="http://fb.com/rezaulkarim.sohag">www.fb.com/rezaulkarim.sohag</a></div>
 
-<p>Arafat<br />
+<div class="infoclass"><strong>Nurul Karim</strong><br />
+Applied Mathmatics<br />
+6th Batch<br />
+<a class="web" href="http://fb.com/nurul.karim.311">www.fb.com/nurul.karim.311</a></div>
+
+<div class="infoclass"><strong>Arafat</strong><br />
 Pharmacy<br />
 6th Batch<br />
-www.fb.com/arafat.boss3</p>
+<a class="web" href="http://fb.com/arafat.boss3">www.fb.com/arafat.boss3</a></div>
 
-<p>Sadek Hossain<br />
+<div class="infoclass"><strong>Sadek Hossain</strong><br />
 English 6th<br />
-www.fb.com/sadek.hossain.106</p>
+<a class="web" href="http://fb.com/sadek.hossain.106">www.fb.com/sadek.hossain.106</a></div>
 
-<p>Mahfuje Johny<br />
+<div class="infoclass"><strong>Mahfuje Johny</strong><br />
 FTNS<br />
 7th Batch<br />
-www.fb.com/mahfuje.johny</p>
+<a class="web" href="http://fb.com/mahfuje.johny">www.fb.com/mahfuje.johny</a></div>
 
-<p>Sovel Ahsan<br />
+<div class="infoclass"><strong>Sovel Ahsan</strong><br />
 ESHS<br />
 7th Batch<br />
-www.fb.com/sovel.chowdhury</p>
+<a class="web" href="http://fb.com/sovel.chowdhury">www.fb.com/sovel.chowdhury</a></div>
 
-<p>Bishal Biswas<br />
+<div class="infoclass"><strong>Shamim Shanto</strong><br />
+EPS 8th Batch<br />
+<a class="web" href="http://fb.com/shamim.santo">www.fb.com/shamim.santo</a></div>
+
+<div class="infoclass"><strong>Bishal Biswas</strong><br />
 ICT 8th Batch<br />
-www.fb.com/bishal.biswas1</p>
+<a class="web" href="http://fb.com/bishal.biswas1">www.fb.com/bishal.biswas1</a></div>
 
-<p>Topu<br />
+<div class="infoclass"><strong>Topu</strong><br />
 English<br />
-8th Batch</p>
+8th Batch</div>
 
-<p>Nur Uddin Shamim<br />
+<div class="infoclass"><strong>Kamrul Hasan Shakim</strong><br />
+CA 8th Batch<br />
+<a href="http://fb.com/shakim.ahmed">www.fb.com/shakim.ahmed</a></div>
+
+<div class="infoclass"><strong>Nur Uddin Shamim</strong><br />
 MBG 9th<br />
-www.fb.com/nuruddin.shamim</p>
+<a class="web" href="http://fb.com/nuruddin.shamim">www.fb.com/nuruddin.shamim</a></div>
 
-<p>Prottoy<br />
+<div class="infoclass"><strong>Prottoy</strong><br />
 ACCE<br />
-9th Batch</p>
+9th Batch</div>
 
-<p>Ahmad<br />
+<div class="infoclass"><strong>Ahmad</strong><br />
 FTNS<br />
-9th Batch</p>
+9th Batch</div>
 
-<p>&nbsp;</p>
+<div class="headertitle">Developer Message</div>
 
-<p>&nbsp;</p>
+<div class="infoclass">It&#39;s an open source project. You can contribute on this project and can help us to fix the bugs. If you want a more beautiful User Interface, make your design in PDS format and send us Email. We will try to implement it on the next version.<br />
+<strong>Application Source code:</strong> <a href="https://github.com/mashpy/nstuinfo">https://github.com/mashpy/nstuinfo</a><br />
+<strong>Database:</strong> Sqlite3<br />
+<strong>Dependent Libraries:</strong><br />
+<strong>Custom Update Library:</strong> <a href="http://github.com/winsontan520/Android-WVersionManager">http://github.com/winsontan520/Android-WVersionManager</a><br />
+<strong>Google Play Service</strong>: <a href="https://github.com/Mashpy/google-play-services_lib">https://github.com/Mashpy/google-play-services_lib</a><br />
+<strong>appcompat_v7</strong>: <a href="https://github.com/Mashpy/appcompat_v7">https://github.com/Mashpy/appcompat_v7</a><br />
+First import all dependent libraries on <a href="https://developer.android.com/sdk/index.html?hl=i">ADT Java-eclips</a>. Then import the application source code. If you find any error please open an issue on github. We will answer you as soon as possible. Thanks in Advance.</div>
 
-<p>&nbsp;</p>
-
-<p>&nbsp;</p>
-
-<p>&nbsp;</p>
-
-<p>&nbsp;</p>
+<div class="infoclass"><strong>Favorite Quotes:</strong> ৬ মাসের সেমিষ্টারে দেড় মাস পরীক্ষা, ১৫ দিন পিএল, পরীক্ষার পর ১৫ দিন বন্ধ, পরীক্ষার ১ মাস আগে পড়ালেখার জন্য দৌড়াদৌড়ি শুরু হয়ে যায়। বাকি আড়াইমাসে ৭ সাব্জেক্টের ১৪ টা ক্লাস টেস্ট আর ৭ টা এসাইনমেন্ট দিতে দিতে পুরো ৬ মাসের সেমিষ্টার , তারপর ৪ বছরের কোর্স শেষ হয়। এক্সটা কিছু করার সময় আর কই? পরীক্ষা সারা জীবনই থাকবে, তাই বলে ক্রিয়েটিভিটিগুলো থেমে থাকতে পারে না। Think Think and Think, mirror will show your creativity. Just Try it to make a better place of our nstu.</div>
