--- a/assets/ignoreit/message_developer.html
+++ b/assets/ignoreit/message_developer.html
@@ -189,7 +189,7 @@ FTNS<br />
 
 <div class="headertitle">Developer Message</div>
 
-<div class="infoclass">It&#39;s an open source project. You can contribute on this project and can help us to fix the bugs. If you want a more beautiful User Interface, make your design in PDS format and send us Email. We will try to implement it on the next version.<br />
+<div class="infoclass">It&#39;s an open source project under GNU General Public License. You can contribute on this project and can help us to fix the bugs. If you want a more beautiful User Interface, make your design in PDS format and send us Email. We will try to implement it on the next version.<br />
 <strong>Application Source code:</strong> <a href="https://github.com/mashpy/nstuinfo">https://github.com/mashpy/nstuinfo</a><br />
 <strong>Database:</strong> Sqlite3<br />
 <strong>Dependent Libraries:</strong><br />
