added all info in the database

--- a/assets/ignoreit/student_activities.html
+++ b/assets/ignoreit/student_activities.html
@@ -59,9 +59,14 @@ Open Source Network started their journey in Noakhali Science and Technology Uni
 
 <div class="infoclass"><strong>Facebook Group:</strong> <a href="https://www.facebook.com/profile.php?id=297499666939182">https://www.facebook.com/profile.php?id=297499666939182</a></div>
 
-<div class="headertitle">MOSHAL Tarunner Moshalci</div>
+<div class="headertitle">MOSHAL</div>
 
-<div class="infoclass">Moshal is an literary and cultural organization of Noakhali Science and Technology University. It has lightened a campus based cultural movement. It works for arousing latent literary and cultural talents in the NSTU family. It is also trying to spread the view of a good culture among the people. Our purpose is to cherish Bangalee culture and tradition in our heart and flourish them in our works. It works for creating a wonderful cultural atmosphere in the university campus. Works: 1. Publishing: Little Magazine, Wallpaper, Bulletin. 2. Organizing Cultural Programs: National Days Celebration, Sahitta Asor. 3. Spreading: Beliefs of Independence War, Beliefs of Humanity.</div>
+<div class="infoclass">Moshal is an literary and cultural organization of Noakhali Science and Technology University. It has lightened a campus based cultural movement. It works for arousing latent literary and cultural talents in the NSTU family. It is also trying to spread the view of a good culture among the people. Our purpose is to cherish Bangalee culture and tradition in our heart and flourish them in our works. It works for creating a wonderful cultural atmosphere in the university campus.<br />
+<br />
+<strong>Works:</strong><br />
+1. Publishing: Little Magazine, Wallpaper, Bulletin.<br />
+2. Organizing Cultural Programs: National Days Celebration, Sahitta Asor.<br />
+3. Spreading: Beliefs of Independence War, Beliefs of Humanity.</div>
 
 <div class="infoclass"><strong>Our Facebook Page:</strong> <a href="http://www.facebook.com/moshal.nstu">www.facebook.com/moshal.nstu</a><br />
 <strong>Our Facebook Group:</strong> <a href="http://www.facebook.com/groups/1590274951201417">www.facebook.com/groups/1590274951201417</a></div>
@@ -70,7 +75,12 @@ Open Source Network started their journey in Noakhali Science and Technology Uni
 
 <div class="headertitle">Science Mania</div>
 
-<div class="infoclass">Science Mania Let science thoughts be easy and interesting Science Mania is a science thoughts platform of Noakhali Science and Technology University. The science maniac people of this organization are working on spreading ongoing world, what is going in the science arena, heartthrob science verses technology news, gorgeous approaches of technology and of course easier and modern science. In these days, science and technology is the first and foremast weapon to go ahead. It is a matter of great sorrow that, usually in our country science is described as a hazy and ambiguous thing from the very beginning of our childhood. So our children and young students cherished a fear for science in their heart. But in real view, science is not so. We, science mania believe that science can be interesting and easy. Simple, easy and friendly explanation of science can fight with this fear and make our people interested on science thinking. Beautiful implementation of science and technology in every sector of society can move the world to a new dimension. If you want to know science and spread the science among the people, you are cordially welcome to the family of science mania. Works: 1. In every weak we organize a weekly discussion. 2. We organize a seminar monthly 3. We publish a &ldquo;Science Deyal Potrika &rdquo; in every month.</div>
+<div class="infoclass">Science Mania Let science thoughts be easy and interesting Science Mania is a science thoughts platform of Noakhali Science and Technology University. The science maniac people of this organization are working on spreading ongoing world, what is going in the science arena, heartthrob science verses technology news, gorgeous approaches of technology and of course easier and modern science. In these days, science and technology is the first and foremast weapon to go ahead. It is a matter of great sorrow that, usually in our country science is described as a hazy and ambiguous thing from the very beginning of our childhood. So our children and young students cherished a fear for science in their heart. But in real view, science is not so. We, science mania believe that science can be interesting and easy. Simple, easy and friendly explanation of science can fight with this fear and make our people interested on science thinking. Beautiful implementation of science and technology in every sector of society can move the world to a new dimension. If you want to know science and spread the science among the people, you are cordially welcome to the family of science mania.<br />
+<br />
+<strong>Works:</strong><br />
+1. In every weak we organize a weekly discussion.<br />
+2. We organize a seminar monthly<br />
+3. We publish a &ldquo;Science Deyal Potrika &rdquo; in every month.</div>
 
 <div class="infoclass"><strong>Our Facebook Page:</strong> <a href="http://www.facebook.com/sciencemania.nstu">www.facebook.com/sciencemania.nstu</a><br />
 <strong>Our Facebook Group:</strong> <a href="http://www.facebook.com/groups/382136268609853">www.facebook.com/groups/382136268609853</a></div>
@@ -86,6 +96,60 @@ Open Source Network started their journey in Noakhali Science and Technology Uni
 
 <div class="infoclass">Contact Person: <strong>Anik Das</strong>, <a class="telephone" href="tel:01729443322">01729443322</a></div>
 
+<div class="headertitle">STOBOK</div>
+
+<div class="infoclass">Stobok is a literature society of NSTU. The members of this society used to have an weekly &lsquo;Adda&rsquo; and they discuss about the literature, culture, music and the society. They believe that literature can make a cultural revolution in the mindset of the generation. It had brought out a fine Wall Paper, &lsquo;Kothonika&rsquo; with fresh literary outputs of university students.<br />
+<br />
+<strong>Activities:</strong><br />
+1. Publishing: Little Magazine, Wallpaper, Bulletin.<br />
+2. Organizing Cultural Programs: Memories the famous literary person, Sahitta Asor.<br />
+3. Spreading: Beliefs of Independence War, Beliefs of Humanity.</div>
+
+<div class="infoclass"><strong>Our Facebook Page:</strong> <a href="http://www.facebook.com/stobok">www.facebook.com/stobok</a><br />
+<strong>Contact Person:</strong> Iru Khairul Karim, <a class="telephone" href="tel:01684980185">01684980185</a></div>
+
+<div class="headertitle">Pharma Mirror</div>
+
+<div class="infoclass">Pharma Mirror &ndash; First online free access professional pharmaceutical magazine of its kind in the world. Pharma Mirror has an International Standard Serial Number ISSN 2219-763X of its own and it has been assigned by ISSN Center, Paris.<br />
+<br />
+Pharma Mirror is founded by Fahad Hussain, a student of pharmacy department of this university with his team comprised of other few students of the same department. He is also acting as the Editor of this magazine. This is a great achievement of the students of the Pharmacy Department of Noakahali science and Technology University.<br />
+<br />
+Pharma Mirror is introducing pharmaceutical journalism over the pharma arena. It represents drugs directory, pharma events listing, current pharma job circulars of Bangladesh, pharmaceutical articles, pharmaceutical news &amp; innovation, pharma leader&rsquo;s interview, featured pharma company profile, pharmacy &amp; medical case studies, pharmacy study materials.<br />
+<br />
+PharmaMirror is an internationally accepted pharma media and completed successful media partnerships with World&#39;s renowned event management companies like Terrapinn Singapore, JFPS Malaysia, Opal Events USA, WTG UK, UBM India, Cphi Conferences, Virtue Insight India, FlemingEurope, BIT LifeScience, IMAPAC, CatalystGlobal etc. in more than 12 countries like USA, UK, China, India, Malaysia, Singapore, Korea, Portugal, Italy, Spain, Bangladesh.<br />
+<br />
+Pharma Mirror participated at Asia Pharma Expo 2011 with a stall named &#39;Pharma Mirror&#39;at Bangabondhu Int&rsquo;l Conference Center; Dhaka, Bangladesh. Pharma Mirror was a also media partner of that event. Pharma Mirror team also participated at FIP World Congress 2011; Hyderabad, India &amp; Biosimilars Congression 2012, UK.<br />
+<br />
+Pharma Mirror believes in cutting-edge peer reviewed contents over the pharma arena.</div>
+
+<div class="infoclass"><strong>Website</strong>: <a href="http://www.PharmaMirror.com">www.PharmaMirror.com</a></div>
+
+<div class="infoclass"><strong>Facebook Page</strong>: <a href="http://www.facebook.com/pharmamirror">www.facebook.com/pharmamirror</a></div>
+
+<div class="headertitle">Biggan Bangla</div>
+
+<div class="infoclass">Biggan Bangla is a science website where they share knowledge all about science. This website is leading by the CSTE 4th Batch. They also publish Galactica Magazine periodically.</div>
+
+<div class="infoclass"><strong>Website:</strong> <a href="http://www.bigganbangla.com">www.bigganbangla.com</a></div>
+
+<div class="infoclass"><strong>Facebook Page:</strong> <a href="http://www.facebook.com/mgalactica">www.facebook.com/mgalactica</a></div>
+
+<div class="headertitle">TechnologyBasic</div>
+
+<div class="infoclass">All Basic Concepts Of Technology In bangla like as wikipedia style ! you can say it a technology dictionary.&nbsp;It&#39;s very helpful site for IT department. This website is leading by CSTE5th Batch.</div>
+
+<div class="infoclass"><strong>Website:</strong> <a href="http://www.TechnologyBasic.com">www.TechnologyBasic.com</a></div>
+
+<div class="infoclass"><strong>Desktop software:</strong>&nbsp; <a href="http://url.mashpy.me/310">http://url.mashpy.me/310</a></div>
+
+<div class="infoclass"><strong>Facebook Page:</strong> <a href="http://www.facebook.com/technologybasic">www.facebook.com/technologybasic</a></div>
+
+<div class="headertitle">Coding(Magazine)</div>
+
+<div class="infoclass">&quot;Coding&quot; Magazine is published by CSTE7th batch. Here they included technical article, story, science fiction and etc.</div>
+
+<div class="infoclass"><strong>Download:</strong> <a href="https://www.facebook.com/download/778571238821219/mymagazine.pdf">https://www.facebook.com/download/778571238821219/mymagazine.pdf</a></div>
+
 <div class="headertitle">Journalist of Our University</div>
 
 <div class="infoclass"><strong>Rezaul Karim Bhuiyan Sohag</strong><br />
@@ -93,18 +157,18 @@ Applied Math, 6th Batch<br />
 Noakhalir Kotha<br />
 <a href="http://www.noakhalirkatha24.com">www.noakhalirkatha24.com</a><br />
 Phone: <a class="telephone" href="tel:01811849284">01811849284</a><br />
-Email: shohag.fn@gmail.com</div>
+Email: <a class="email" href="mailto:shohag.fn@gmail.com">shohag.fn@gmail.com</a></div>
 
 <div class="infoclass"><strong>Nurul Karim</strong><br />
 Applied Math, 6th Batch<br />
 Campas Live News<br />
 <a href="http://www.campuslive24.com">www.campuslive24.com</a><br />
 Phone: <a class="telephone" href="tel:01961482528">01961482528</a><br />
-Email: n.karim92@gmail.com</div>
+Email: <a class="email" href="mailto:n.karim92@gmail.com">n.karim92@gmail.com</a></div>
 
 <div class="infoclass"><strong>Hafij Ullah Shamim</strong><br />
 English, 6th Batch<br />
 Banglanews24<br />
 <a href="http://www.banglanews24.com">www.banglanews24.com</a><br />
 Phone: <a class="telephone" href="tel:01829704731">01829704731</a><br />
-Email: hafizullashamim@gmail.com</div>
+Email: <a class="email" href="mailto:hafizullashamim@gmail.com">hafizullashamim@gmail.com</a></div>
