fixed the number of marium mam

--- a/assets/ignoreit/department.html
+++ b/assets/ignoreit/department.html
@@ -232,7 +232,11 @@ Email: <a class="email" href="mailto:monir.pharma@yahoo.com">monir.pharma@yahoo.
 <div class="infoclass"><strong>Sujan Banik</strong><br />
 Phone: <a class="telephone" href="tel:01727446920">01727446920</a></div>
 
-<div class="infoclass"><strong>Mariyam Akter</strong></div>
+<div class="infoclass">
+<div><strong>Mariyam Akter</strong></div>
+
+<div>Phone: <a class="telephone" href="tel:01738125060">01738125060</a></div>
+</div>
 
 <div class="headertitle">Applied Chemistry &amp; Chemical Engineering (ACCE 04)</div>
 
@@ -308,13 +312,6 @@ Email: <a class="email" href="mailto:shafiul_acct@yahoo.com">shafiul_acct@yahoo.
 <div class="infoclass"><strong>Mohammed Shahidul Islam</strong><br />
 Phone: <a class="telephone" href="tel:01710510106">01710510106</a><br />
 Email: <a class="email" href="mailto:shahid_acct@yahoo.com">shahid_acct@yahoo.com</a></div>
-
-<p>-------------------------------------------<br />
-Section Officer</p>
-
-<div class="infoclass">Md. Ismail Hossain<br />
-Phone: 01728150181<br />
-Email: <a class="email" href="mailto:shipon.nstu@gmail.com">shipon.nstu@gmail.com</a></div>
 
 <div class="headertitle">MicroBiology (MBG 05)</div>
 
@@ -574,6 +571,6 @@ Email: <a class="email" href="mailto:siddique1506@gmail.com">siddique1506@gmail.
 Mobile: <a class="telephone" href="tel:01712019331">01712019331</a>,<a class="telephone" href="tel:01936493265"> 01936493265</a><br />
 Email: <a class="email" href="mailto:shohrab.ag@gmail.com">shohrab.ag@gmail.com</a></div>
 
-<div class="infoclass">Kawsar Hossen<br />
+<div class="infoclass"><strong>Kawsar Hossen</strong><br />
 Mobile: <a class="telephone" href="tel:01710395738">01710395738</a>, <a class="telephone" href="tel:01914161707">01914161707</a><br />
 Email: <a class="email" href="mailto:kwsarbau@gmail.com">kwsarbau@gmail.com</a></div>
